2017-09-25 Riccardo Mottola <rm@gnu.org>

	* DBCSVWriter.h
	* DBCSVWriter.m
	* DBFileWriter.h
	* DBFileWriter.m
	* DBHTMLWriter.h
	* DBHTMLWriter.m
	put setStringEncoding in superclass

2017-09-25 Riccardo Mottola <rm@gnu.org>

	* DBCSVWriter.h
	* DBCSVWriter.m
	* DBFileWriter.h
	* DBFileWriter.m
	* DBHTMLWriter.h
	* DBHTMLWriter.m
	put writeDataSet in superclass, as well as encoding info.

2017-09-25 Riccardo Mottola <rm@gnu.org>

	* DBCSVWriter.h
	* DBCSVWriter.m
	* DBFileWriter.h
	* DBFileWriter.m
	Put writeOrder in super class

2017-09-25 Riccardo Mottola <rm@gnu.org>

	* DBHTMLWriter.m
	Better header/footer for HTML.

2017-09-21 Riccardo Mottola <rm@gnu.org>

	* DBSoap.h
        * DBSoap.m
        * DBSObject.m
        Make SOQL length defineable

2017-09-20 Riccardo Mottola <rm@gnu.org>

	* DBCSVWriter.h
	* DBCSVWriter.m
	* DBHTMLWriter.h
	* DBHTMLWriter.m
	Factor out common File Writer class

2017-04-26 Riccardo Mottola <rm@gnu.org>

	* DBSObject.m
	Minor change to NSUInteger

2016-11-23 Riccardo Mottola <rm@gnu.org>

	* DBSoapCSV.m (queryIdentify:)
	Release object array always, even if it was empty.

2016-11-23 Riccardo Mottola <rm@gnu.org>

	* DBSoap.m
	Simplify code by using addObjectsFromArray.

2016-11-22 Riccardo Mottola <rm@gnu.org>

	* DBSoapCSV.m (queryIdentify:)
	Adjust the identification loop to the query loop when it is not MAX, furthermore make result objects local to loop.

2016-10-18 Riccardo Mottola <rm@gnu.org>

	* DBCSVWriter.h
	* DBCSVWriter.m
	* DBHTMLWriter.h
	* DBHTMLWriter.m
	Provide common writeStart and writeEnd method to write out the begin and end of a block, clean and complete table header ad rows generation.

2016-10-18 Riccardo Mottola <rm@gnu.org>

	* DBSoapCSV.m
	Use the property writeFieldsOrdered directly and do not try to reset it.

2016-06-27 Riccardo Mottola <rm@gnu.org>

	* DBSoap.m
        Use GSWS constants instead of hard-coded strings.

2016-06-24 Riccardo Mottola <rm@gnu.org>

	* DBSObject.m (_update)